--- a/.gitignore
+++ b/.gitignore
@@ -3,29 +3,45 @@
 .android
 .bash_history
 .cache
+.caff
+.caffrc
+.claws-mail
 .config
+.crypted_mount
 .dbus
 .gconf
 .gitconfig
 .gnome2
+.gnupg
 .lesshst
 .libreoffice
 .local
 .mozilla
-.pulse-cookie
+.mutt
+.osc
+.osc-plugins
 .pulse
+.pulse-cookie
+.purple
 .recently-used.xbel
 .signature
+.ssh
 .ssh/authorized_keys
 .ssh/known_hosts
+.unison
 .viminfo
 .w3m/bufinfo
 .w3m/history
 .xdg_menu_cache
 .xsession-errors
+.xsession-errors-:0
 .*~
 *~
+Maildir/
 bin/
+git/
+work/
+
 # http://www.gnu.org/software/automake
 
 Makefile.in
