--- a/.shellrc
+++ b/.shellrc
@@ -13,6 +13,12 @@ export HISTCONTROL=ignoreboth:erasedups
 export HISTFILESIZE=123456
 export HISTSIZE=23456
 export PS1='\u@\h:\w \$ '
+if grep -w control_d /proc/xen/capabilities &>/dev/null
+then
+	export LIBVIRT_DEFAULT_URI='xen:///system'
+else
+	export LIBVIRT_DEFAULT_URI='qemu:///system'
+fi
 if test -d /usr/share/terminfo && test -n "${TERM}"
 then
 	new_term=
